--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> calculadiora </h1>
-    <div class="calculator"
+    <div class="calculator">
     < input type="text" disabled id="display">
     <div class="box-button">
         <button>C</button>
@@ -26,9 +26,9 @@
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button>0</button>
+        <button class= "btn-zero">0</button>
         <button>.</button>
-        <button>=</button>
+        <button class=" "btn-result>=</button>
     </div>
     </div>
 </body>
