--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <style>
     body{
 display: flex;
 flex-direction: column;
@@ -61,6 +61,7 @@ button:hover{
     height: 100%;
     grid-column: 4;
 }
+</style>
     <title>Calculadora</title>
 </head>
 <body>
